--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-# ignore object files
-
-/obj
-
-#ignore GTest output
-
-/gtest_results
-/test/bin
+# C++ output folders and files
+obj
+gtest_results
+test/bin
