--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,12 @@ cmake_minimum_required(VERSION 3.5)
 include_directories("${PROJECT_SOURCE_DIR}/include")
 set(ALGOLIB "algolib")
 set(GRAPHS "${ALGOLIB}/graphs")
-set(MATHS "${ALGOLIB}/math")
+set(MATH "${ALGOLIB}/math")
 set(STRUCTURES "${ALGOLIB}/structures")
+set(TEXT "${ALGOLIB}/text")
 set(ALGOLIB_SOURCES
     "${ALGOLIB}/closest_points.cpp"
     "${ALGOLIB}/convex_hull.cpp"
-    "${ALGOLIB}/kmp.cpp"
-    "${ALGOLIB}/kmr.cpp"
     "${ALGOLIB}/lis.cpp"
     "${ALGOLIB}/maximum_subarray.cpp"
     "${ALGOLIB}/sorting.cpp"
@@ -31,20 +30,24 @@ set(GRAPHS_SOURCES
     "${GRAPHS}/searching.cpp"
     "${GRAPHS}/topological_sorting.cpp"
     "${GRAPHS}/undirected_graph.cpp")
-set(MATHS_SOURCES
-    "${MATHS}/fraction.cpp"
-    "${MATHS}/maths.cpp"
-    "${MATHS}/primes.cpp")
+set(MATH_SOURCES
+    "${MATH}/equation_system.cpp"
+    "${MATH}/fraction.cpp"
+    "${MATH}/maths.cpp"
+    "${MATH}/primes.cpp")
 set(STRUCTURES_SOURCES
     "${STRUCTURES}/avl_tree.cpp"
-    "${STRUCTURES}/disjoint_sets.cpp"
-    "${STRUCTURES}/equation_system.cpp")
+    "${STRUCTURES}/disjoint_sets.cpp")
+set(TEXT_SOURCES
+    "${TEXT}/kmp.cpp"
+    "${TEXT}/kmr.cpp")
 set(SOURCES
     "${ALGOLIB_SOURCES}"
     "${GRAPHS_SOURCES}"
-    "${MATHS_SOURCES}"
-    "${STRUCTURES_SOURCES}")
+    "${MATH_SOURCES}"
+    "${STRUCTURES_SOURCES}"
+    "${TEXT_SOURCES}")
 
 # OUTPUT
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 add_library(algolib SHARED ${SOURCES})
