CMakeLists for tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
-
-# PROJECT
+cmake_minimum_required(VERSION 3.10)
 project(algolib VERSION 0.3)
 
 # COMPILER
@@ -9,4 +7,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
 
 # OUTPUT
 add_subdirectory(src)
-#add_subdirectory(test)
+add_subdirectory(test)
