--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ project(algolib VERSION 0.3)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
 
+# SOURCES
+include_directories("${PROJECT_SOURCE_DIR}/include")
+
+# TESTS
+include(CTest)
+
 # OUTPUT
 add_subdirectory(src)
 add_subdirectory(test)
