--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(algolib VERSION 0.4.190415
-                LANGUAGE CXX)
+                LANGUAGES CXX)
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
