--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,11 +9,11 @@ set(STRUCTURES "${ALGOLIB}/structures")
 set(TEXT "${ALGOLIB}/text")
 set(ALGOLIB_SOURCES
     "${ALGOLIB}/closest_points.cpp"
-    "${ALGOLIB}/convex_hull.cpp"
     "${ALGOLIB}/lis.cpp"
     "${ALGOLIB}/maximum_subarray.cpp"
     "${ALGOLIB}/vector_sorting.cpp")
 set(GEOMETRY_SOURCES
+    "${GEOMETRY}/convex_hull.cpp"
     "${GEOMETRY}/point2d.cpp"
     "${GEOMETRY}/points_sorting.cpp")
 set(GRAPHS_SOURCES
