--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,12 +17,12 @@ set(SOURCES
     "kmp_test.cpp"
     "lca_test.cpp"
     "maths_test.cpp"
-    "maximum_subarray_test.cpp"
     "mst_test.cpp"
     "paths_test.cpp"
     "points_sorting_test.cpp"
     "primes_test.cpp"
     "scc_test.cpp"
+    "subseqs_test.cpp"
     "suffix_array_test.cpp"
     "topological_sorting_test.cpp"
     "undirected_graph_test.cpp")
