Execute script for installing gtest

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ compiler:
   - clang
 
 before_install:
-  - ci/install_gtest.sh
+  - ./ci/install_gtest.sh
   - mkdir build
 install:
   - cd ./build
