--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ compiler:
 before_install:
   - ./ci/install_gtest.sh
   - mkdir build
+  - cd build
 install:
-  - cd ./build
   - cmake ..
   - make
-script: cd ./build && ctest -T test
+script: ctest -T test
