Rewrite equation systems with tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCES
     "directed_graph_test.cpp"
     "disjoint_sets_test.cpp"
     "equation_test.cpp"
+    "equation_system_test.cpp"
     "fraction_test.cpp"
     "kmp_test.cpp"
     "lowest_common_ancestor_test.cpp"
