--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,5 +61,5 @@ set(SOURCES
     "${TEXT_SOURCES}")
 
 # OUTPUT
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/dist")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${LIB_OUTPUT_DIR}")
 add_library(algolib SHARED ${SOURCES})
