Implementation of edges and refactoring

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,11 @@ cmake_minimum_required(VERSION 3.10)
 #SOURCES
 set(ALGOLIB "algolib")
 set(GEOMETRY "${ALGOLIB}/geometry")
-set(GRAPHS "${ALGOLIB}/old_graphs")
+set(GRAPHS "${ALGOLIB}/graphs")
 set(GRAPHS_ALGORITHMS "${GRAPHS}/algorithms")
 set(MATHMAT "${ALGOLIB}/mathmat")
+set(OLD_GRAPHS "${ALGOLIB}/old_graphs")
+set(OLD_GRAPHS_ALGORITHMS "${OLD_GRAPHS}/algorithms")
 set(SEQUENCES "${ALGOLIB}/sequences")
 set(STRUCTURES "${ALGOLIB}/structures")
 set(TEXT "${ALGOLIB}/text")
@@ -16,29 +18,35 @@ set(GEOMETRY_SOURCES
     "${GEOMETRY}/point2d.cpp"
     "${GEOMETRY}/points_sorting.cpp")
 set(GRAPHS_SOURCES
-    "${GRAPHS}/directed_graph.cpp"
+    "${GRAPHS}/edge.cpp"
     "${GRAPHS}/graph.cpp"
-    "${GRAPHS}/multipartite_graph.cpp"
-    "${GRAPHS}/tree_graph.cpp"
-    "${GRAPHS}/undirected_graph.cpp")
+    "${GRAPHS}/simple_graph.cpp")
 set(GRAPHS_ALGORITHMS_SOURCES
-    "${GRAPHS_ALGORITHMS}/cutting.cpp"
-    "${GRAPHS_ALGORITHMS}/dinic.cpp"
-    "${GRAPHS_ALGORITHMS}/edmonds.cpp"
-    "${GRAPHS_ALGORITHMS}/lowest_common_ancestor.cpp"
-    "${GRAPHS_ALGORITHMS}/matching.cpp"
-    "${GRAPHS_ALGORITHMS}/minimal_spanning_tree.cpp"
-    "${GRAPHS_ALGORITHMS}/paths.cpp"
-    "${GRAPHS_ALGORITHMS}/strongly_connected_components.cpp"
-    "${GRAPHS_ALGORITHMS}/searching.cpp"
-    "${GRAPHS_ALGORITHMS}/searching_strategy.cpp"
-    "${GRAPHS_ALGORITHMS}/topological_sorting.cpp")
+    )
 set(MATHMAT_SOURCES
     "${MATHMAT}/equation.cpp"
     "${MATHMAT}/equation_system.cpp"
     "${MATHMAT}/fraction.cpp"
     "${MATHMAT}/maths.cpp"
     "${MATHMAT}/primes.cpp")
+set(OLD_GRAPHS_SOURCES
+    "${OLD_GRAPHS}/directed_graph.cpp"
+    "${OLD_GRAPHS}/graph.cpp"
+    "${OLD_GRAPHS}/multipartite_graph.cpp"
+    "${OLD_GRAPHS}/tree_graph.cpp"
+    "${OLD_GRAPHS}/undirected_graph.cpp")
+set(OLD_GRAPHS_ALGORITHMS_SOURCES
+    "${OLD_GRAPHS_ALGORITHMS}/cutting.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/dinic.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/edmonds.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/lowest_common_ancestor.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/matching.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/minimal_spanning_tree.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/paths.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/strongly_connected_components.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/searching.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/searching_strategy.cpp"
+    "${OLD_GRAPHS_ALGORITHMS}/topological_sorting.cpp")
 set(SEQUENCES_SOURCES
     "${SEQUENCES}/sorting.cpp"
     "${SEQUENCES}/subsequences.cpp")
@@ -56,6 +64,8 @@ set(SOURCES
     "${GRAPHS_SOURCES}"
     "${GRAPHS_ALGORITHMS_SOURCES}"
     "${MATHMAT_SOURCES}"
+    "${OLD_GRAPHS_SOURCES}"
+    "${OLD_GRAPHS_ALGORITHMS_SOURCES}"
     "${SEQUENCES_SOURCES}"
     "${STRUCTURES_SOURCES}"
     "${TEXT_SOURCES}")
