--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,8 @@ set(GRAPHS_ALGORITHMS_SOURCES
     "${GRAPHS_ALGORITHMS}/cutting.cpp"
     "${GRAPHS_ALGORITHMS}/minimal_spanning_tree.cpp"
     "${GRAPHS_ALGORITHMS}/searching.cpp"
-    "${GRAPHS_ALGORITHMS}/searching_strategy.cpp")
+    "${GRAPHS_ALGORITHMS}/searching_strategy.cpp"
+    "${GRAPHS_ALGORITHMS}/topological_sorting.cpp")
 set(MATHMAT_SOURCES
     "${MATHMAT}/equation.cpp"
     "${MATHMAT}/equation_system.cpp"
