Lowest common ancestor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ set(GRAPHS_SOURCES
     "${GRAPHS}/undirected_graph.cpp")
 set(GRAPHS_ALGORITHMS_SOURCES
     "${GRAPHS_ALGORITHMS}/cutting.cpp"
+    "${GRAPHS_ALGORITHMS}/lowest_common_ancestor.cpp"
     "${GRAPHS_ALGORITHMS}/minimal_spanning_tree.cpp"
     "${GRAPHS_ALGORITHMS}/searching.cpp"
     "${GRAPHS_ALGORITHMS}/searching_strategy.cpp"
