--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set(GRAPHS_SOURCES
     "${GRAPHS}/graph.cpp"
     "${GRAPHS}/simple_graph.cpp"
     "${GRAPHS}/multipartite_graph.cpp"
+    "${GRAPHS}/properties.cpp"
     "${GRAPHS}/tree_graph.cpp"
     "${GRAPHS}/undirected_graph.cpp")
 set(GRAPHS_ALGORITHMS_SOURCES
