--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,9 +13,12 @@ set(TEXT "${ALGOLIB}/text")
 set(GEOMETRY_SOURCES
     "${GEOMETRY}/closest_points.cpp"
     "${GEOMETRY}/convex_hull.cpp"
+    "${GEOMETRY}/geometry.cpp"
     "${GEOMETRY}/point2d.cpp"
+    "${GEOMETRY}/point3d.cpp"
     "${GEOMETRY}/points_sorting.cpp"
-    "${GEOMETRY}/vector2d.cpp")
+    "${GEOMETRY}/vector2d.cpp"
+    "${GEOMETRY}/vector3d.cpp")
 set(GRAPHS_SOURCES
     "${GRAPHS}/directed_graph.cpp"
     "${GRAPHS}/edge.cpp"
