--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # [ C / C++ ]
-# C++ / CMake output
+# C / C++ / CMake output
 bin/
 build/
 dist/
@@ -7,10 +7,10 @@ dist/
 # Doxygen output
 docs/
 
-# CLion
-.idea
-cmake-build-debug/
-
 # Visual Studio Code
 .vscode
 *.code-workspace
+
+# CLion
+.idea
+cmake-build-debug/
