Tests for sorting

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,6 +41,7 @@ set(MATHMAT_TEST_SOURCES
     "${MATHMAT_TEST}/maths_test.cpp"
     "${MATHMAT_TEST}/primes_test.cpp")
 set(SEQUENCES_TEST_SOURCES
+    "${SEQUENCES_TEST}/sorting_test.cpp"
     "${SEQUENCES_TEST}/subsequences_test.cpp")
 set(STRUCTURES_TEST_SOURCES
     "${STRUCTURES_TEST}/avl_tree_test.cpp"
