--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,5 +63,5 @@ set(SOURCES
     "${TEXT_SOURCES}")
 
 # OUTPUT
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${LIB_OUTPUT_DIR}")
-add_library(algolib SHARED ${SOURCES})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})
+add_library(${LIB_NAME} SHARED ${SOURCES})
