--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 # PACKAGES
 find_package(GTest REQUIRED)
-include_directories("${GTEST_INCLUDE_DIRS}")
+include_directories(${GTEST_INCLUDE_DIRS})
 
 set(CMAKE_THREAD_PREFER_PTHREAD true)
 set(THREADS_PREFER_PTHREAD_FLAG true)
@@ -67,8 +67,8 @@ foreach(testsource ${TEST_SOURCES})
     get_filename_component(testexec ${testsource} NAME_WE)
     add_executable(${testexec} ${testsource})
     target_link_libraries(${testexec}
-                        GTest::GTest
-                        GTest::Main
-                        "${LIB_OUTPUT_DIR}/libalgolib.so")
+                          GTest::GTest
+                          GTest::Main
+                          ${LIB_NAME})
     gtest_add_tests(TARGET ${testexec})
 endforeach(testsource ${TEST_SOURCES})
