--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: APT Install GTest
+    - name: APT Install
       run: sudo apt-get install libgtest-dev
 
     - name: Install GTest
